--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon App.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./src/App.js",
+    "test": "jest"
   },
   "author": "valentin",
   "license": "ISC",
@@ -16,6 +16,8 @@
     "mongoose": "^8.2.2"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.2.0",
     "nodemon": "^3.1.0"
   },
   "keywords": [],
